--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <span class="c1">Cùng điểm danh nhé</span>
 
     <input  required class="input" id="hoten" placeholder="Họ và tên" />
-    <input id="imageInput" type="file" accept="image/*" capture="camera" class="input">
+    <input required id="imageInput" type="file" accept="image/*" capture="camera" class="input">
      <select id="mode" class="input" style="width: 100%;">
       <option value="Online">Online</option>
       <option value="Offline">Offline</option>
